--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body{
     background-image: linear-gradient(to bottom, #eeeeee, #ffffff);
-    color: #000000;
-    font-weight: bold;
+    color: #333;
     font-family: Helvetica, Arial;
+    font-size: 16px;
+    line-height: 26px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    hyphens: auto;
+    font-weight: 500;
 }
 
 header{
@@ -106,7 +111,7 @@ nav a:visited{
     text-shadow: 1px 1px black;
 }
 
-nav a:hover, .signupbutton:hover, .loginbutton:hover{
+.homebutton:hover, .signupbutton:hover, .loginbutton:hover,.historybutton:hover,.settingsbutton:hover{
     color: red;
     text-decoration: none;
 }
@@ -158,7 +163,7 @@ header,nav,main,footer{
     color:darkblue;
 }
 
-.loginbutton,.signupbutton {
+.homebutton,.loginbutton,.signupbutton,.historybutton,.settingsbutton {
     color: darkblue;
     font-weight: bold;
     border: none;
@@ -167,7 +172,6 @@ header,nav,main,footer{
     font-size: 20px;
     background-color: #d3d3d3;
     margin-top: 5px;
-    padding-bottom: 1.15em;
 }
 
 .signupbutton{
@@ -322,9 +326,8 @@ input,textarea{
     h1{
         height: 100%;
         font-size: 1.3em;
-        padding-left: .3em;
         background-image: none;
-        margin-left: 6.5em;
+        width: auto;
     }
     
     nav{
