--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
             {% endfor%}
         {% endif %}
     {% endwith %}
-<form action ="#" method="post">
+<form action ="/login" method="post">
     <label for="lemail">Email:</label>
     <input type="email" name="lemail">
     <label for="lpassword">Password:</label>
