--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
     {% endif %}
   {% endwith %}
   <p>Perspective is designed to bring similar articles from different political perspectives into one place for an easy way to get different view points.</p>
-  <form action ="#" method="post">
+  <form method="POST", action="/prereading">
     <ul id="article-list">
       {% for article in articles %}
-      <li><a href="/prereading"><button class="button article-title" name="button_id" id="button_id" value="{{loop.index}}">{{article.source1 + ":" + " " + " " + " " + article.title1}}</button></a></li>
+      <button class="button article-title" name="article" id="button_id" value="{{loop.index|string}}">{{article.source1 + ": " + " " + " " + " " + article.title1}}</button>
       {% endfor %}
      </ul>
-  </form>
+  </form> 
 {% endblock %}
