--- a/templates/reading.html
+++ b/templates/reading.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Choose a viewpoint</h2>
-<button class="button liberalbutton" id="liberalbutton">Liberal</button>
-<button class="button independentbutton" id="independentbutton">Independent</button>
-<button class="button conservativebutton" id="conservativebutton">Conservative</button> <br>
-<h2 id=articlesSource>{{article.title2}}</h2>
-<h2 id=articlesTitle>{{article.source2}}</h2>
-<a href="{{article.url2}}" id="articlelink">Link to Original Article</a>
+<form method="POST", action="/prereading2">
+<button class="button liberalbutton" name="perspectives" id="liberalbutton" value="Liberal">Liberal</button>
+<button class="button independentbutton" name="perspectives" id="independentbutton" value="Independent">Independent</button>
+<button class="button conservativebutton" name="perspectives" id="conservativebutton" value="Conservative">Conservative</button> <br>
+</form>
+<h2 id=articlesSource>{{article.title1}}</h2>
+<h2 id=articlesTitle>{{article.source1}}</h2>
+<a href="{{article.url1}}" id="articlelink">Link to Original Article</a>
 <p id=articles>
-    {{article.story2}}
+    {{article.story1}}
 </p>
 {% endblock %}
