--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         {% endfor%}
     {% endif %}
   {% endwith %}
-  <p>Perspective is designed to bring similar articles from different political perspectives into one place for an easy way to get different view points.</p>
+  <p><strong>Perspective is designed to bring similar articles from different political perspectives into one place for an easy way to get different view points.</strong></p>
   <form method="POST", action="/prereading">
     <ul id="article-list">
       {% for article in articles %}
