--- a/static/style.css
+++ b/static/style.css
@@ -61,7 +61,8 @@ footer{
 
 }
 
-footer a{
+footer a:link{
+    color: darkblue;
     text-decoration: none;
 }
 
@@ -124,11 +125,16 @@ nav ul{
 }
 
 nav ul li{
-    margin-top: 6px;
+    margin-top: 5px;
 }
 
 header,nav,main,footer{
     display: block;
+}
+
+main{
+    display: flex;
+    justify-content: center;
 }
 
 .liberalbutton, .conservativebutton, .independentbutton {
@@ -203,8 +209,11 @@ h1 a:visited{
 }
 
 #article-list{
+    width: 40em;
     list-style-type: none;
     padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .article-title{
@@ -262,26 +271,8 @@ input,textarea{
     margin-bottom: 1em;
 }
 
-#mobile{display:none;}#desktop{display:inline;}
 
 @media only screen and (max-width: 1100px){
-    
-    body{
-        margin: 0;
-        padding: 0;
-        background-image: none;
-    }
-    
-    .wrapper{
-        width: auto;
-        min-width: 0;
-        margin: 0;
-        box-shadow: none;
-    }
-    
-    h1{
-        margin: 0;
-    }
     
     nav{
         float: none;
@@ -295,13 +286,26 @@ input,textarea{
     nav li{
         display: inline-block;
     }
-    
-    nav a{
-        padding-right: 2em;
+
+    body{
+        margin: 0;
+        padding: 0;
+        background-image: none;
     }
     
+    .wrapper{
+        width: 100%;
+        min-width: 0;
+        margin: 0;
+        box-shadow: none;
+    }
+    
+    h1{
+        margin: 0;
+    } 
+    
     main{
-        padding: 1em;
+        padding: 0;
         margin-left: 0;
         margin-right: 0;
         font-size: 90%;
@@ -329,6 +333,7 @@ input,textarea{
         font-size: 1.3em;
         background-image: none;
         width: auto;
+        text-align: center;
     }
     
     nav{
@@ -375,5 +380,6 @@ input,textarea{
 
     .conservativebutton {
         font-style: 14px;
+        width: 8.1em;
     }
 }
