--- a/static/style.css
+++ b/static/style.css
@@ -371,7 +371,7 @@ input,textarea{
 
     .article-title{
         width: auto;
-        margin-left: 1em;
+        margin-left: 0;
         margin-right: 1em;
     }
 
