--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
             {% endfor%}
         {% endif %}
     {% endwith %}
-<form action="/login" method="post">
+<form action="/signup" method="post">
     <label for="sfname">First name:</label>
     <input type="text" name="sfname">
     <label for="slname">Last name:</label>
